@@ -3,21 +3,20 @@ package dev.su5ed.mffs.blockentity;
 import dev.su5ed.mffs.api.Activatable;
 import dev.su5ed.mffs.api.card.CoordLink;
 import dev.su5ed.mffs.api.card.FrequencyCard;
+import dev.su5ed.mffs.api.fortron.FortronStorage;
 import dev.su5ed.mffs.api.security.BiometricIdentifier;
 import dev.su5ed.mffs.api.security.BiometricIdentifierLink;
 import dev.su5ed.mffs.block.BaseEntityBlock;
 import dev.su5ed.mffs.setup.ModCapabilities;
 import dev.su5ed.mffs.util.*;
 import dev.su5ed.mffs.util.inventory.InventorySlot;
-import net.minecraft.core.BlockPos;
-import net.minecraft.world.item.ItemStack;
-import net.minecraft.world.level.block.entity.BlockEntity;
-import net.minecraft.world.level.block.entity.BlockEntityType;
-import net.minecraft.world.level.block.state.BlockState;
-import net.minecraft.world.level.storage.ValueInput;
-import net.minecraft.world.level.storage.ValueOutput;
-import net.neoforged.neoforge.fluids.FluidType;
+import net.minecraft.item.ItemStack;
+import net.minecraft.nbt.NBTTagCompound;
+import net.minecraft.util.EnumFacing;
+import net.minecraft.util.math.BlockPos;
+import net.minecraftforge.common.capabilities.Capability;
 import one.util.streamex.StreamEx;
+import org.jetbrains.annotations.Nullable;
 
 import java.util.List;
 import java.util.Optional;
@@ -25,17 +24,15 @@ import java.util.Set;
 
 public abstract class FortronBlockEntity extends InventoryBlockEntity implements BiometricIdentifierLink, Activatable {
     public final InventorySlot frequencySlot;
-
     public final FortronStorageImpl fortronStorage;
 
     private boolean markSendFortron = true;
     private boolean active;
     protected int animation;
 
-    protected FortronBlockEntity(BlockEntityType<? extends BaseBlockEntity> type, BlockPos pos, BlockState state) {
-        super(type, pos, state);
-
-        this.fortronStorage = new FortronStorageImpl(this, getBaseFortronTankCapacity() * FluidType.BUCKET_VOLUME, this::setChanged);
+    protected FortronBlockEntity() {
+        super();
+        this.fortronStorage = new FortronStorageImpl(this, getBaseFortronTankCapacity(), this::markDirty);
         this.frequencySlot = addSlot("frequency", InventorySlot.Mode.BOTH, ModUtil::isCard, this::onFrequencySlotChanged);
     }
 
@@ -47,25 +44,21 @@ public abstract class FortronBlockEntity extends InventoryBlockEntity implements
         this.markSendFortron = markSendFortron;
     }
 
-    /**
-     * @return The initial fortron tank capacity in buckets
-     */
+    /** @return The initial Fortron tank capacity in F */
     public int getBaseFortronTankCapacity() {
-        return 1;
+        return 1000;
     }
 
     protected List<ItemStack> getCards() {
-        return List.of(this.frequencySlot.getItem());
+        return java.util.Collections.singletonList(this.frequencySlot.getItem());
     }
 
     protected void animate() {
-        if (isActive()) {
-            this.animation++;
-        }
+        if (isActive()) this.animation++;
     }
 
     protected void onFrequencySlotChanged(ItemStack stack) {
-        FrequencyCard card = stack.getCapability(ModCapabilities.FREQUENCY_CARD);
+        FrequencyCard card = stack.getCapability(ModCapabilities.FREQUENCY_CARD, null);
         if (card != null) {
             card.setFrequency(this.fortronStorage.getFrequency());
         }
@@ -73,80 +66,107 @@ public abstract class FortronBlockEntity extends InventoryBlockEntity implements
 
     @Override
     public boolean isActive() {
-        return this.level.isClientSide() ? getBlockState().getValue(BaseEntityBlock.ACTIVE) : this.active || this.level.hasNeighborSignal(this.worldPosition);
+        if (this.world.isRemote) {
+            return this.world.getBlockState(this.pos).getValue(BaseEntityBlock.ACTIVE);
+        }
+        return this.active || this.world.isBlockPowered(this.pos);
     }
 
     @Override
     public void setActive(boolean active) {
         this.active = active;
-        setChanged();
+        markDirty();
     }
 
     @Override
     public void onLoad() {
         super.onLoad();
-        FrequencyGrid.instance().register(this.fortronStorage);
+        FrequencyGrid.instance(this.world.isRemote).register(this.fortronStorage);
     }
 
     @Override
-    public void onChunkUnloaded() {
-        super.onChunkUnloaded();
-        FrequencyGrid.instance().unregister(this.fortronStorage);
+    public void onChunkUnload() {
+        super.onChunkUnload();
+        FrequencyGrid.instance(this.world.isRemote).unregister(this.fortronStorage);
     }
 
     @Override
     public void tickServer() {
         super.tickServer();
 
-        BlockState state = getBlockState();
+        // Guard: if we somehow missed onLoad() (chunk edge-case) re-register on the first tick
+        // so the FrequencyGrid is always populated with the correct, NBT-loaded frequency.
+        // I don't actually know if this solved the strange issues I was having, but oh well.
+        if (getTicks() == 1 && !FrequencyGrid.instance(this.world.isRemote).get().contains(this.fortronStorage)) {
+            FrequencyGrid.instance(this.world.isRemote).register(this.fortronStorage);
+        }
+
         boolean active = isActive();
+        net.minecraft.block.state.IBlockState state = this.world.getBlockState(this.pos);
         if (state.getValue(BaseEntityBlock.ACTIVE) != active) {
-            this.level.setBlockAndUpdate(this.worldPosition, state.setValue(BaseEntityBlock.ACTIVE, active));
+            this.world.setBlockState(this.pos, state.withProperty(BaseEntityBlock.ACTIVE, active));
         }
     }
 
     @Override
     public void tickClient() {
         super.tickClient();
-
         animate();
     }
 
-    @Override
-    public void preRemoveSideEffects(BlockPos pos, BlockState state) {
-        super.preRemoveSideEffects(pos, state);
-
-        if (this.markSendFortron) {
-            // Let remaining Fortron escape.
-            Fortron.transferFortron(this.fortronStorage, FrequencyGrid.instance().get(this.level, this.worldPosition, 100, this.fortronStorage.getFrequency()), TransferMode.DRAIN, Integer.MAX_VALUE);
-        }
-        this.level.invalidateCapabilities(this.worldPosition);
-    }
-
-    @Override
-    protected void loadCommonTag(ValueInput input) {
-        super.loadCommonTag(input);
-
-        input.child("fortronStorage").ifPresent(this.fortronStorage::deserialize);
-        this.active = input.getBooleanOr("active", false);
-    }
-
-    @Override
-    protected void saveCommonTag(ValueOutput output) {
-        super.saveCommonTag(output);
-
-        output.putChild("fortronStorage", this.fortronStorage);
-        output.putBoolean("active", this.active);
-    }
-
     /**
-     * Gets the first linked security station, based on the card slots and frequency.
+     * Called before the tile entity is removed from the world.
+     * Transfers remaining Fortron to nearby tiles.
      */
     @Override
+    public void preRemoveSideEffects(BlockPos pos) {
+        if (this.markSendFortron) {
+            Fortron.transferFortron(this.fortronStorage, FrequencyGrid.instance(this.world.isRemote).get(this.world, this.pos, 100, this.fortronStorage.getFrequency()), TransferMode.DRAIN, Integer.MAX_VALUE);
+        }
+    }
+
+    // -------------------------------------------------------------------------
+    // Capability exposure: FortronStorage
+    // -------------------------------------------------------------------------
+
+    @Override
+    public boolean hasCapability(Capability<?> capability, @Nullable EnumFacing facing) {
+        if (capability == ModCapabilities.FORTRON) {
+            return true;
+        }
+        return super.hasCapability(capability, facing);
+    }
+
+    @SuppressWarnings("unchecked")
+    @Override
+    public <T> T getCapability(Capability<T> capability, @Nullable EnumFacing facing) {
+        if (capability == ModCapabilities.FORTRON) {
+            return (T) this.fortronStorage;
+        }
+        return super.getCapability(capability, facing);
+    }
+
+    @Override
+    protected void loadCommonTag(NBTTagCompound compound) {
+        super.loadCommonTag(compound);
+        if (compound.hasKey("fortronStorage")) {
+            this.fortronStorage.readNbt(compound.getCompoundTag("fortronStorage"));
+        }
+        this.active = compound.getBoolean("active");
+    }
+
+    @Override
+    protected void saveCommonTag(NBTTagCompound compound) {
+        super.saveCommonTag(compound);
+        NBTTagCompound fortronTag = new NBTTagCompound();
+        this.fortronStorage.writeNbt(fortronTag);
+        compound.setTag("fortronStorage", fortronTag);
+        compound.setBoolean("active", this.active);
+    }
+
+    @Override
     public BiometricIdentifier getBiometricIdentifier() {
-        return getBiometricIdentifiers().stream()
-            .findFirst()
-            .orElse(null);
+        return getBiometricIdentifiers().stream().findFirst().orElse(null);
     }
 
     @Override
@@ -154,16 +174,21 @@ public abstract class FortronBlockEntity extends InventoryBlockEntity implements
         return StreamEx.of(getCards())
             .mapPartial(stack -> {
                 if (stack.getItem() instanceof CoordLink link) {
-                    return Optional.ofNullable(link.getLink(stack))
-                        .map(this.level::getBlockEntity)
-                        .map(be -> be.getLevel().getCapability(ModCapabilities.BIOMETRIC_IDENTIFIER, be.getBlockPos(), be.getBlockState(), be, null));
+                    BlockPos linkPos = link.getLink(stack);
+                    if (linkPos != null) {
+                        net.minecraft.tileentity.TileEntity te = this.world.getTileEntity(linkPos);
+                        if (te != null) {
+                            BiometricIdentifier bi = te.getCapability(ModCapabilities.BIOMETRIC_IDENTIFIER, null);
+                            return Optional.ofNullable(bi);
+                        }
+                    }
                 }
                 return Optional.empty();
             })
-            .append(StreamEx.of(FrequencyGrid.instance().get(this.fortronStorage.getFrequency()))
+            .append(StreamEx.of(FrequencyGrid.instance(this.world.isRemote).get(this.fortronStorage.getFrequency()))
                 .mapPartial(storage -> {
-                    BlockEntity be = storage.getOwner();
-                    return Optional.ofNullable(be.getLevel().getCapability(ModCapabilities.BIOMETRIC_IDENTIFIER, be.getBlockPos(), be.getBlockState(), be, null));
+                    net.minecraft.tileentity.TileEntity te = storage.getOwner();
+                    return Optional.ofNullable(te != null ? te.getCapability(ModCapabilities.BIOMETRIC_IDENTIFIER, null) : null);
                 }))
             .toSet();
     }
